[FIX] Fixed z-index for navbar

--- a/src/styles/components/Navbar.scss
+++ b/src/styles/components/Navbar.scss
@@ -6,7 +6,7 @@ Header
 .Header {
   $root: '.Header';
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
   margin-bottom: 0;
   background-color: rgba($flat-gray-1, .9);
